kcms/keys: Use storageId instead of desktopEntryName

The latter is always lower case while storageId preserves the
original capitalization.
BUG:438204


(cherry picked from commit 84a4c73b9490666027db55eb849cf7ed8ee37847)